/*
 * $Id: ChangeLog,v 1.5836 2007/12/26 20:21:33 modalsist Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2007-12-27 05.30 UTC+0700 Andi Jahja <harbour/AT/cbn/net/id>
  * source/compiler/harbour.c
    ! minor fix (for Windows OS) to allow define and include path in
      quotation marks and compile prg with long file name eg:
      harbour "my long program" -d"__FOO__" -i"C:\My Long Include Path"

2007-12-26 18:20 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
  * include\hbcomp.h
    ! restored hb_compGenCObj and hb_compGenObj32 function declarations.

2007-12-26 12:45 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
  * makefile.bc
  * makefile.dc
  * makefile.gc
  * makefile.pc
  * makefile.vc
  * makefile.wc
  * source\compiler\MakeFile
    + restored gencobj.c and genobj32.c files.

  * source\compiler\harbour.c
  * source\compiler\cmdcheck.c
  * source\compiler\hbusage.c
    ! restored -go and -gw flags.

  * source\compiler\gencobj.c
  * source\compiler\genobj32.c
    + restored to complier.

  * source\rtl\tbrowse.prg
    ! fixed GoBottom() method behaviour. Suggested by Pavel Tsarenko.

2007-12-25 12.30 UTC+0700 Andi Jahja <harbour/AT/cbn/net/id>
   * source/tip/thtml.prg
     * hb_strAtI() as extern "C"

2007-12-24 14:34 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * source/macro/macro.y
    ! Fixed a memory leak in the macro compiler.

2007-12-24 00:56 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * source/common/hbver.h
    * Fixed some warnings, partially synced with Harbour.
  * source/compiler/harbour.sly
    ! Fixed building under Pelles C and MS C.

2007-12-23 20:14 UTC+0100 Enrico Maria Giordano <e.m.giordano@emagsoftware.it>
  * source/rtl/fssize.c
    * Commented out unused variable ulRet in function hb_fsFSize()

  * source/ct/envparam.c